--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [requires]
-python_version = ">3.5"
+python_version = ">=3.5"
 
 [dev-packages]
 
