--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [requires]
-python_version = "3.5"
+python_version = ">=3.5"
 
 [dev-packages]
 
 [packages]
 googletrans = "*"
+python-dotenv = "*"
