Added to input.txt.sample, fixed safe navigation

--- a/input.txt.sample
+++ b/input.txt.sample
@@ -39,7 +39,7 @@ Pomatocalpa spicata
 Rhacopilum spectabile
 Rhizogonium spiniforme
 Cinnyris sperata
-
-Timber Wolf -n
 Thyme -n
 Bean sprout -n
+Grassland sparrow -n
+snow crab -n
