Search name feature (#12)
* Add non-scientific-name search feature

* Removed unneeded file from gitignore

* Added to input.txt.sample, fixed safe navigation

--- a/input.txt.sample
+++ b/input.txt.sample
@@ -39,3 +39,7 @@ Pomatocalpa spicata
 Rhacopilum spectabile
 Rhizogonium spiniforme
 Cinnyris sperata
+Thyme -n
+Bean sprout -n
+Grassland sparrow -n
+snow crab -n
